# osi-sensor-model-packaging

doc/: specification.rst
examples/: CMakeLists.txt
examples/OSMPCNetworkProxy/: CMakeLists.txt  modelDescription.in.xml
examples/OSMPDummyFunction/: CMakeLists.txt  OSMPDummyFunction.cpp  OSMPDummyFunction.h  modelDescription.in.xml
examples/OSMPDummySensor/: CMakeLists.txt  OSMPDummySensor.cpp  OSMPDummySensor.h
examples/OSMPDummySource/: OSMPDummySource.cpp
